--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 <body>
 <div id="login-form">
     <div id="login-title">Log into Select Shop</div>
-    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=a2e17680f71bee957ae93ff6bdb13bd5&redirect_uri=http://localhost:8080/api/user/kakao/callback&response_type=code'">
+    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=a2e17680f71bee957ae93ff6bdb13bd5&redirect_uri=http://ec2-43-201-58-108.ap-northeast-2.compute.amazonaws.com:8080/api/user/kakao/callback&response_type=code'">
         카카오로 로그인하기
     </button>
     <button id="login-id-btn" onclick="location.href='/api/user/signup'">
